# stock_market_game

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: actor.rs  lib.rs  main.rs
apps/server/: Cargo.toml
apps/server/src/: actor.rs  lib.rs  main.rs  routes.rs
apps/server/tests/: actor.rs  api_contract.rs  healthz.rs  ws.rs
apps/web/: package.json  vite.config.ts
apps/web-wasm/: Cargo.toml
apps/web-wasm/.cargo/: config.toml
apps/web-wasm/src/: lib.rs
apps/web/src/: App.css  App.tsx  index.css  main.tsx
apps/web/src/components/: AutoOrders.tsx  MarketGrid.tsx  PriceChart.tsx
apps/web/src/config/: defaults.ts
apps/web/src/hooks/: useAppDispatch.ts  useOrientation.ts  useTheme.ts
apps/web/src/host/: tauri-host.ts  wasm-host.ts  wasm-worker.ts  worker-host.ts
apps/web/src/save/: save-file.ts
apps/web/src/store/: priceHistorySlice.ts  selectedStockSlice.ts  store.ts
apps/web/src/types/: engine.ts
apps/web/src/utils/: format.ts
docs/: architecture.md  error-handling.md  open-questions.md  principles.md  tech-stack.md  testing.md
docs/decisions/: 0000-template.md  0001-record-architecture-decisions.md  0002-engine-rust-wasm.md  0003-backend-rust.md  0004-frontend-state-redux-toolkit.md  0005-unified-engine-three-deployments.md  0006-npc-strategy-module.md  0007-three-deployment-frontend-framework.md  0008-gpu-and-compute-offload.md
docs/superpowers/plans/: 2026-06-29-account.md  2026-06-29-initial-positions.md  2026-06-29-market.md  2026-06-29-money-fixed-point.md  2026-06-29-orderbook.md  2026-06-29-session.md  2026-06-29-strategy-impl.md
docs/superpowers/specs/: 2026-06-29-account-design.md  2026-06-29-gameconfig-design.md  2026-06-29-initial-positions-design.md  2026-06-29-market-design.md  2026-06-29-money-fixed-point-design.md  2026-06-29-orderbook-design.md  2026-06-29-session-design.md  2026-06-29-strategy-impl-design.md
scripts/: build.bat  build.sh  wasm-build.bat  wasm-build.sh
