[workspace]
resolver = "2"
members = ["packages/engine"]

# WASM 绑定层（apps/web 的 Rust 侧）后续加入：
# members = ["packages/engine", "apps/web-wasm"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["msuad"]
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
