[workspace]
resolver = "2"
members = ["packages/engine", "apps/web-wasm", "apps/server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["msuad"]
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
