[package]
name = "web-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

# cdylib → wasm-bindgen 产物；rlib 供 cargo test。
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine = { path = "../../packages/engine" }
wasm-bindgen = "=0.2.93"
wasm-bindgen-rayon = "=1.2.1"
serde-wasm-bindgen = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
